# mic2sock.rs

./: .gitignore  Cargo.toml  asio_client  asio_client.cpp  conf.toml  config.toml
src/: config_file.rs  connection.rs  jack_client.rs  main.rs  mic_in.rs  ring_buf.rs  socket.rs  system_call.rs  tcp_client.rs  tcp_server.rs
