[package]
name = "mic2net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.6.0"
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["full"] }
bytes = "1.2.1"
arc-swap = "1.5.1"