[package]
name = "mic2sock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { version = "0.11.4" }
serde = { version = "1.0.160", features = ["derive", "std"] }
toml = "0.7.3"
tokio = { version = "1.28.0", features = ["full"] }
bytes = "1.4.0"
arc-swap = "1.6.0"